--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Inteview task Post api for shortrurl",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node src/server.js"
   },
+  
   "author": "Saianth Dekonda",
   "license": "MIT",
   "dependencies": {
