--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/server.js"
   },
-  
   "author": "Saianth Dekonda",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "node-url-shortener": "^2.0.1",
+    "shortid": "^2.2.16",
     "shorturl": "^0.0.3",
     "tinyurl": "^1.1.7"
   }
